# pymake

./: .gitignore  about.md  docs.md  pymake.py  pyproject.toml  readme.md
example/: main.py
example/inc/: example.hpp
example/src/: example.cpp  test.cpp
